update addToCart method flow
