# cart-service/src/main/java/com/turkcell/cart_service/web/controller/CartsController.java
@@ -1,8 +1,10 @@
 package com.turkcell.cart_service.web.controller;
 
 import com.turkcell.cart_service.application.usecase.AddToCartUseCase;
+import com.turkcell.cart_service.domain.model.Cart;
 import com.turkcell.cart_service.web.dto.request.CartItemRequest;
 import com.turkcell.cart_service.web.dto.response.CartItemResponse;
+import com.turkcell.cart_service.web.mapper.CartMapper;
 import jakarta.validation.Valid;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -17,21 +19,23 @@ import java.util.UUID;
 public class CartsController{
 
     private final AddToCartUseCase addToCartUseCase;
+    private final CartMapper cartMapper;
 
-    public CartsController(AddToCartUseCase addToCartUseCase) {
+    public CartsController(AddToCartUseCase addToCartUseCase, CartMapper cartMapper) {
         this.addToCartUseCase = addToCartUseCase;
+        this.cartMapper = cartMapper;
     }
 
     @PostMapping("/{customerId}")
     public CartItemResponse addToCart(@PathVariable UUID customerId, @Valid @RequestBody CartItemRequest request) {
 
-        CartItemResponse response = addToCartUseCase.addToCart(
+        Cart cart = addToCartUseCase.addToCart(
                 customerId,
                 request.productId(),
                 request.quantity()
         );
 
-        return response;
+        return cartMapper.toCartItemResponse(cart, request.productId());
     }
 
 }
